--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.5.0",
+    "idb": "^8.0.2",
     "ol": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
