working on deploy

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,30 +3,32 @@
     "name": "Artsearcher",
     "short_name": "Artsearcher",
     "description": "Discover and explore art galleries and exhibitions around the world.",
-
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "orientation": "portrait",
-    "categories": ["art", "education", "lifestyle"],
+    "categories": [
+        "art",
+        "education",
+        "lifestyle"
+    ],
     "icons": [
         {
-            "src": "/images/favicon-192x192.png",
+            "src": "/favicons/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/images/favicon-512x512.png",
+            "src": "/favicons/favicon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
     ],
     "screenshots": [
         {
-            "src": "/images/screenshot-1.png",
+            "src": "/favicons/screenshot-1.png",
             "type": "image/png",
             "sizes": "640x480"
         }
     ]
-    
 }
